# apps/backend/src/user/dto/update-fcm-token.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, MinLength } from 'class-validator';
+
+export class UpdateFcmTokenDto {
+  @ApiProperty()
+  @IsString()
+  @MinLength(1)
+  fcmToken: string;
+}
